--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "init-tailwind": "tailwindcss init -p",
     "preview": "vite preview",
     "dev": "vite",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "deploy": "npm run build && npx gh-pages -d dist"
   },
   "dependencies": {
     "lucide-react": "^0.554.0",
@@ -26,6 +27,7 @@
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "gh-pages": "^6.3.0",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
